@@ -1,3 +1,9 @@
+2006-11-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-smb.el (tramp-smb-read-file-entry): Share names can
+	contain spaces.
+	(tramp-smb-open-connection): Quote arguments.
+
 2006-11-21  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-set-remote-path): `tramp-default-remote-path'
